/*
 * Copyright (c) 1987-2022 Angband contributors.
 *
 * This work is free software; you can redistribute it and/or modify it
 * under the terms of either:
 *
 * a) the GNU General Public License as published by the Free Software
 *    Foundation, version 2, or
 *
 * b) the Angband licence:
 *    This software may be copied and distributed for educational, research,
 *    and not for profit purposes provided that this copyright and statement
 *    are included in all such copies.  Other copyrights may also apply.
 *
 *    Java code and ANTLR4 grammars copyright (c) Rowan Crowther 2026
 */

plugins {
    id 'application'
}

repositories {
    mavenCentral()
}

dependencies {
    implementation platform("org.apache.logging.log4j:log4j-bom:2.25.4")
    implementation "org.apache.logging.log4j:log4j-api:2.25.4"
    implementation "org.apache.logging.log4j:log4j-core:2.25.4"

    implementation("org.junit.jupiter:junit-jupiter:6.1.0-M1")
    implementation("org.junit.jupiter:junit-jupiter-api:6.1.0-M1")
    implementation("org.junit.jupiter:junit-jupiter-engine:6.1.0-M1")
    implementation("org.junit.jupiter:junit-jupiter-params:6.1.0-M1")

    // Required by Gradle's JUnit Platform test runner (the launcher is not pulled in by the
    // jupiter aggregator); version matches the JUnit 6.1.0-M1 jupiter artifacts above.
    testRuntimeOnly("org.junit.platform:junit-platform-launcher:6.1.0-M1")

    implementation("org.antlr:antlr4-runtime:4.13.2")

    implementation "org.jetbrains:annotations:26.1.0"

    implementation "net.java.dev.jna:jna-platform:5.13.0"

    runtimeOnly "org.apache.logging.log4j:log4j-core"
}

tasks.withType(JavaCompile) {
    options.compilerArgs << "-Xlint:unchecked"
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(26)
    }
}

application {
    mainClass = 'uk.co.jackoftrades.Main'
}

test {
    useJUnitPlatform()
}